Update requirements.txt with complete list of Python dependencies for SOC deep learning project

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,19 @@
-# Python dependencies
+tensorflow
+pytorch
 numpy
 pandas
-requests
-flask
+scikit-learn
+rasterio
+matplotlib
+seaborn
+folium
+geopandas
+xarray
+netCDF4
+h5py
+scipy
+jupyter
+ipython
+notebook
+tqdm
+pillow
